flashbang wieder rückgängig gemacht

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -210,8 +210,8 @@
                 // Stop sound
                 $.ajax({
                     method: "POST",
-                    //url: "/bot/stop?voiceChannelId=" + $('#user').val()
-                    url: "/bot/playFileInChannel?soundFileId=" + "Flashbang" + "&voiceChannelId=" + $('#user').val()
+                    url: "/bot/stop?voiceChannelId=" + $('#user').val()
+                    //url: "/bot/playFileInChannel?soundFileId=" + "Flashbang" + "&voiceChannelId=" + $('#user').val()
                     // Spielt die CSGO Flashbang ab, statt normal zu stoppen KEKW
                 });
             }).on('click', '#play-url', function () {
