connect to voicechannel eingebaut

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,6 +54,7 @@
             <h2>Einstellungen</h3>
             <ul class="uk-nav uk-nav-default">
                 <li class="uk-nav-header">Control</li>
+                <li><a id="connect"><span class="uk-margin-small-right" uk-icon="sign-in"></span>Connect</a></li>
                 <li><a id="reload"><span class="uk-margin-small-right" uk-icon="refresh"></span>Reload</a></li>
                 <li><a id="disconnect"><span class="uk-margin-small-right" uk-icon="sign-out"></span>Disconnect</a></li>
                 <li class="uk-nav-divider"></li>
